syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/babenkoivan/todo/grpc";

service TodoService {
  rpc Create(TodoRequest) returns (TodoResponse) {}
  rpc List(google.protobuf.Empty) returns (TodoListResponse) {}
}

service UserService {
  rpc Login(LoginRequest) returns (TokenResponse) {}
  rpc Create(UserRequest) returns (UserResponse) {}
}

message TodoRequest {
  string task = 1;
}

message TodoResponse {
  int64 id = 1;
  string task = 2;
  string createdAt = 3;
  UserResponse user = 4;
}

message TodoListResponse {
  repeated TodoResponse todos = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message TokenResponse {
  string token = 1;
}

message UserRequest {
  string username = 1;
  string password = 2;
}

message UserResponse {
  int64 id = 1;
  string username = 2;
  string createdAt = 3;
}